fix the bug that alertWarning covered by navbar

--- a/static/sass/order-progress.sass
+++ b/static/sass/order-progress.sass
@@ -23,7 +23,7 @@
       line-height: 3em
       border-radius: 100%
       position: relative
-      z-index: 1000
+      z-index: 100
     &:after
       content: ''
       position: absolute
