--- a/static/sass/order.sass
+++ b/static/sass/order.sass
@@ -107,5 +107,5 @@ body
 
 #alert-message
   position: fixed
-  top: -150px
-  z-index: 1000
+  top: -50px
+  z-index: 200
